# 2024-P1-DarrenOoi

./: README.md  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
